start image to txt

--- a/impanda/templates/template.html
+++ b/impanda/templates/template.html
@@ -6,8 +6,8 @@
     <style>
         pre {
             font-size: 1em;
-            line-height: 1em;
-            margin: 20px 50px;
+            line-height: 0.8em;
+            margin: 50px;
         }
     </style>
 </head>
