--- a/impanda/templates/template.html
+++ b/impanda/templates/template.html
@@ -12,6 +12,6 @@
     </style>
 </head>
 <body>
-    <pre>{{ txt }}</pre>
+    <pre>{% for line in data %}{{ line }}{% endfor %}</pre>
 </body>
 </html>
